[package]
name = "at-twitter-stream"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/at-twitter-stream"
keywords = ["twitter", "wayback"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
#bytes = "1.0"
bzip2 = "0.4"
chrono = "0.4"
clap = "3.0.0-beta.5"
csv="1.1"
log = "0.4"
rocksdb = "0.17"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.11"
tar = "0.4"
tempfile = "3.2"
thiserror = "1.0"
zip = "0.5"
